kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_stmt_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 174
expression: "crate::tests::parsing_module_string(r#\"if True a = 1\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [
                                        Node {
                                            node: Identifier {
                                                names: [],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 8,
                                            end_line: 1,
                                            end_column: 11,
                                        },
                                    ],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 12,
                                        end_line: 1,
                                        end_column: 13,
                                    },
                                    type_annotation: None,
                                    ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 10,
                            end_line: 1,
                            end_column: 13,
                        },
                    ],
                    cond: Node {
                        node: NameConstantLit(
                            NameConstantLit {
                                value: True,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 7,
                    },
                    orelse: [],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 13,
        },
    ],
    comments: [],
}

