kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_stmt_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"if True: a = 1 else if b = 2\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [
                                        Node {
                                            node: Identifier {
                                                names: [
                                                    Node {
                                                        node: "a",
                                                        filename: "",
                                                        line: 1,
                                                        column: 9,
                                                        end_line: 1,
                                                        end_column: 10,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Store,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 9,
                                            end_line: 1,
                                            end_column: 10,
                                        },
                                    ],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                    ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 9,
                            end_line: 1,
                            end_column: 14,
                        },
                    ],
                    cond: Node {
                        node: NameConstantLit(
                            NameConstantLit {
                                value: True,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 7,
                    },
                    orelse: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [
                                        Node {
                                            node: Identifier {
                                                names: [],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 25,
                                            end_line: 1,
                                            end_column: 26,
                                        },
                                    ],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 27,
                                        end_line: 1,
                                        end_column: 28,
                                    },
                                    ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 25,
                            end_line: 1,
                            end_column: 28,
                        },
                    ],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 28,
        },
    ],
    comments: [],
}
